<resources>
    <string name="app_name">Stickies</string>
    <string name="play">Play</string>
    <string name="profile">Profile</string>
    <string name="decks">Decks</string>
    <string name="account">Account</string>
    <string name="add_new_deck">Add new deck</string>
    <string name="first">1.</string>
    <string name="synonyms">Synonyms</string>
    <string name="add_a_new_card">Add a new card</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="add_a_new_deck">Add a new deck</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="ok">OK</string>
    <string name="delete_deck">delete deck</string>
    <string name="title_synonyms_cards">Synonyms Cards</string>
    <string name="titles_translations_cards">Translations Cards</string>
    <string name="insert_the_word">Insert the Word</string>
    <string name="choose_the_part_of_speech">Choose the part of speech</string>
    <string name="insert_synonym">Insert synonym</string>
    <string name="insert_translation">Insert translation</string>
    <string name="empty">empty</string>
    <string name="play_time">Play Time</string>
    <string name="log_out">Log out</string>
    <string name="intro_question">Ready to learn?</string>
    <string name="intro_italic">press</string>
    <string name="intro_answer">Of course!</string>
    <string name="get_started">Get Started</string>
    <string name="date">Date</string>
    <string name="favourite">Favourite</string>
</resources>