<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="Play Time"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/layout_synonyms_card"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/play_btn_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_play"
            app:layout_constraintVertical_bias="0.15" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_btn_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/good"
            app:backgroundTint="@color/good_recall"
            app:iconSize="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play_btn_ok"
            app:layout_constraintTop_toTopOf="@+id/play_btn_ok"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Stickies.Button.Rounded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_btn_bad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad"
            android:gravity="center"
            app:backgroundTint="@color/bad_recall"
            app:iconSize="48dp"
            app:layout_constraintEnd_toStartOf="@+id/play_btn_ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play_btn_ok"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Stickies.Button.Rounded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="116dp"
            android:gravity="center"
            android:text="@string/ok"
            app:backgroundTint="@color/ok_recall"
            app:iconSize="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/play_btn_good"
            app:layout_constraintStart_toEndOf="@+id/play_btn_bad"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Stickies.Button.Rounded" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>